test/TestSuite/Syntax/Errors/bad_include.tjp
project test "Test" "1.0" 2007-08-19 +2m 

# MARK: error 4 bad_include
include "foo.tji"

task bar "Bar" {
	start ${projectstart}
}

